--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -8,6 +8,10 @@
   align-items: flex-start;
 }
 
+#about .profile {
+  padding-top: 4rem;
+}
+
 #about .profile img.avatar {
   width: 36rem;
   height: auto;
@@ -82,6 +86,9 @@
 @media (max-width: 500px) {
   #about {
     margin-top: -8rem;
+  }
+  #about .profile {
+    padding-top: 0;
   }
   #about .profile img.avatar {
     width: 24rem;
